--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ a:visited {
 }
 
 #sherry-martin-cover {
- background-image: url("https://i.imgur.com/8G417Se.jpg");
+ background-image: url("https://archive.org/download/ocean_view_3/oceanwide.jpg");
 }
 
 #joe-burgess-card {
